--- a/CSS/activity.css
+++ b/CSS/activity.css
@@ -1,6 +1,5 @@
 .title-activity h1 {
-  padding: 45px 0 5px 0;
-  margin-left: 45px;
+  margin: 60px 0 30px 62px;
   color: #000000;
 }
 
@@ -8,9 +7,9 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 5px;
-  margin-left: 50px;
   margin-bottom: 57px;
   gap: 37px;
+  justify-content: center;
 }
 
 .activity-container .activity-marseille {
@@ -125,7 +124,7 @@
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   width: 100%;
-  height: 110px;
+  height: 111px;
   object-fit: cover;
   object-position: 50% 20%; 
 }
@@ -247,7 +246,7 @@
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   width: 100%;
-  height: 147px;
+  height: 150px;
   object-fit: cover;
   object-position: 20% 20%;
 }
